<resources>
    <string name="app_name">SuperScan</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="pindai_belanjaanmu">Pindai Belanjaanmu</string>
    <string name="selamat_datang_anya">Selamat Datang, Anya!</string>
    <string name="riwayat">Riwayat</string>
    <string name="selengkapnya"><u>Selengkapnya</u></string>
    <string name="coca_cola">Coca Cola</string>
    <string name="_1_buah">1 buah</string>
    <string name="rp_10_000">Rp. 10.000</string>
    <string name="scrollview">ScrollView</string>
    <string name="total_harga">Total Harga</string>
    <string name="bayar">Bayar</string>
    <string name="detail_produk">Detail Produk</string>
    <string name="kode_pembayaran">Kode Pembayaran</string>
    <string name="salin"><u>Salin</u></string>
    <string name="code">ABC123DEF456HIJ</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="batas_akhir_pembayaran">Batas Akhir Pembayaran</string>
    <string name="senin_16_mei_2022_20_15_wib">Senin, 16 Mei 2022 20:15 WIB</string>
    <string name="cara_pembayaran">Cara Pembayaran</string>
    <string name="_1_datang_ke_kasir">1. Datang ke kasir</string>
    <string name="_2_tunjukkan_kode_pembayaran_ke_kasir">2. Tunjukkan <b><font color="#71C9CE">kode pembayaran</font></b> ke kasir</string>
    <string name="_3_bayar_dengan_uang_tunai_kartu_kredit_uang_elektronik_sesuai_total_pembayaran">3. Bayar dengan uang tunai/kartu kredit/uang elektronik sesuai total pembayaran</string>
    <string name="_4_transaksi_selesai_simpan_struk_sebagai_bukti_pembayaran">4. Transaksi selesai, simpan struk sebagai bukti pembayaran</string>
    <string name="id_transaksi_ss01">ID Transaksi: SS01</string>
    <string name="minggu_15_mei_2022">Minggu, 15 Mei 2022</string>
    <string name="scanButton">ScanButton</string>
    <string name="anya">Anya Forger</string>
    <string name="anyalovepeanut_gmail_com">anyalovepeanut@gmail.com</string>
    <string name="hub_kam">Hubungi Kami</string>
    <string name="beri_penilaian">Beri Penilaian</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="tentangKamiParagraf1">Kami merupakan tim <i>Product-based Capstone</i> dengan <i>Team ID</i> <b>C22-PS022</b> beranggotakan 6 orang. Komposisi tim kami terdiri dari 2 orang anggota MD, 1 orang anggota CC dan 3 orang anggota ML. Aplikasi ini dibuat bertujuan untuk memenuhi persyaratan kelulusan program Studi Independen Bangkit 2022.</string>
    <string name="tentangKamiParagraf2">Kami mengucapkan terima kasih sebanyak-banyaknya kepada artis dan fotografer berikut sebab karya mereka kami gunakan sebagai bagian dari aplikasi UI aplikasi ini:</string>
    <string name="credit1">1. Jonny Caspari (https://unsplash.com/@jonnysplsh)</string>
    <string name="credit2">2. Felix Zhao (https://unsplash.com/@bigflyroading)</string>
    <string name="credir3">3. @sketchify - Canva</string>
    <string name="credit4">4. @sketchifykorea - Canva</string>
    <string name="credit5">5. @sketchifyindonesia - Canva</string>
    <string name="pertanyaan1">Menurut Anda, apa bagian yang perlu diperbaiki dari aplikasi ini? Silahkan tuliskan kritik Anda di sini.</string>
    <string name="inputtext1">Misal: Ukuran font terlalu kecil, button tidak bisa diklik, dll</string>
    <string name="pertanyaan2">Menurut Anda, apa saran yang bisa membuat aplikasi kami jauh lebih baik? Silahkan tuliskan saran Anda di sini</string>
    <string name="inputtext2">Misal: Sebaiknya perbesar lagi ukuran font, dll</string>
    <string name="belum_ada_transaksi">Belum ada transaksi</string>
    <string name="sudah_bayar">Sudah \n Bayar</string>
    <string name="tokenPref">Token Preferences</string>
    <string name="tokenValue">Token Value</string>
    <string name="kirim">Kirim</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="userId">userId</string>
    <string name="userName">userName</string>
    <string name="avatar">avatar</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="bills">bills</string>
    <string name="hasil_produk">Hasil Produk</string>
    <string name="kembali">Kembali</string>
    <string name="durasi_kode_aktif">Durasi kode Aktif</string>
    <string name="_30_menit">30 Menit</string>
</resources>