<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        style="@style/textSizeAndStyle"
        android:text="@string/login"
        android:textColor="@color/teal_darker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.pemeluksenja.superscan.logincustom.EmailEditTextCustom
        android:id="@+id/emailEditTextCustom"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:hint="@string/email"
        android:minWidth="32dp"
        android:minHeight="48dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.pemeluksenja.superscan.logincustom.PasswordEditTextCustom
        android:id="@+id/passwordEditTextCustom"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:minHeight="48dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextCustom" />

    <com.pemeluksenja.superscan.logincustom.LoginButtonCustom
        android:id="@+id/loginButtonCustom"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextCustom" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButtonCustom">

        <TextView
            android:id="@+id/belumPunyaAkun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"
            tools:layout_editor_absoluteX="115dp"
            tools:layout_editor_absoluteY="594dp" />

        <Button
            android:id="@+id/moveToRegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/teal_darker"
            android:backgroundTint="@color/white"
            tools:layout_editor_absoluteX="203dp"
            tools:layout_editor_absoluteY="579dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>