<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp">
    <androidx.cardview.widget.CardView
        android:id="@+id/historyCard"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="309dp"
        android:layout_height="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="72dp"
                android:src="@drawable/icon"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/transactionID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_transaksi_ss01"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/orderAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minggu_15_mei_2022"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_10_000"
                    style="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Belum Bayar"
                android:layout_gravity="center_vertical"
                style="@style/textSizeAndStyle15sp"
                android:textColor="@color/red"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>